--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,4 +3,52 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+    <servlet>
+        <servlet-name>Show</servlet-name>
+        <servlet-class>org.example.Servlet.ShowPage</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>login</servlet-name>
+        <servlet-class>org.example.Servlet.ServletLogin</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>logout</servlet-name>
+        <servlet-class>org.example.Servlet.ServletLogout</servlet-class>
+    </servlet>
+    
+    <servlet-mapping>
+        <servlet-name>Show</servlet-name>
+        <url-pattern>/Servlet/Show</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>login</servlet-name>
+<!--        不需要加项目名称，因为会自动加-->
+        <url-pattern>/Servlet/login</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>logout</servlet-name>
+        <url-pattern>/Servlet/logout</url-pattern>
+    </servlet-mapping>
+    
+    <filter>
+        <filter-name>CharacterEncoding</filter-name>
+        <filter-class>org.example.Filter.CharacterEncodingFilter</filter-class>
+    </filter>
+    <filter>
+        <filter-name>LoginFilter</filter-name>
+        <filter-class>org.example.Filter.LoginFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>CharacterEncoding</filter-name>
+        <url-pattern>/Servlet/*</url-pattern>
+<!--        <url-pattern>/*</url-pattern>-->
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>LoginFilter</filter-name>
+        <url-pattern>/sys/*</url-pattern>
+    </filter-mapping>
+    
+    <listener>
+        <listener-class>org.example.Listener.OnlineCountListener</listener-class>
+    </listener>
 </web-app>
